--- a/BitwiseHelper/BitwiseHelper.vcxproj
+++ b/BitwiseHelper/BitwiseHelper.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{74CE597F-BAB0-4B5C-9A33-96F823F65AB6}</ProjectGuid>
+    <ProjectGuid>{69D1DF34-B465-448E-935F-61BEDA31CF5B}</ProjectGuid>
     <RootNamespace>BitwiseHelper</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <Keyword>MFCProj</Keyword>
@@ -189,10 +189,8 @@
     <ClInclude Include="BitwiseHelper.h" />
     <ClInclude Include="BitwiseHelperDoc.h" />
     <ClInclude Include="BitwiseHelperView.h" />
-    <ClInclude Include="ChildFrm.h" />
+    <ClInclude Include="CalendarBar.h" />
     <ClInclude Include="MainFrm.h" />
-    <ClInclude Include="MyBit.h" />
-    <ClInclude Include="MyBits.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -201,16 +199,19 @@
     <ClCompile Include="BitwiseHelper.cpp" />
     <ClCompile Include="BitwiseHelperDoc.cpp" />
     <ClCompile Include="BitwiseHelperView.cpp" />
-    <ClCompile Include="ChildFrm.cpp" />
+    <ClCompile Include="CalendarBar.cpp" />
     <ClCompile Include="MainFrm.cpp" />
-    <ClCompile Include="MyBit.cpp" />
-    <ClCompile Include="MyBits.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="BitwiseHelper.reg" />
+    <None Include="res\BitwiseHelper.rc2" />
+    <None Include="res\ribbon.mfcribbon-ms" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BitwiseHelper.rc" />
@@ -222,16 +223,16 @@
     <Image Include="res\filelarge.bmp" />
     <Image Include="res\filesmall.bmp" />
     <Image Include="res\main.bmp" />
-    <Image Include="res\myButtons.bmp" />
-    <Image Include="res\myButtons2.bmp" />
+    <Image Include="res\nav_large.bmp" />
+    <Image Include="res\nav_large_hc.bmp" />
+    <Image Include="res\pages.bmp" />
+    <Image Include="res\pages_hc.bmp" />
+    <Image Include="res\pages_small.bmp" />
+    <Image Include="res\pages_small_hc.bmp" />
     <Image Include="res\Toolbar.bmp" />
     <Image Include="res\Toolbar256.bmp" />
     <Image Include="res\writelarge.bmp" />
     <Image Include="res\writesmall.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="res\BitwiseHelper.rc2" />
-    <None Include="res\ribbon.mfcribbon-ms" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
